# CS50P

./: .gitignore  README.md  pyproject.toml
finalProject/: README.md  constants.py  main.py  model.py  project.py  requirements.txt  services.py  test_main.py  test_model.py  test_project.py  test_services.py
set0/: einstein.py  faces.py  indoor.py  playback.py  tip.py
set1/: bank.py  deep.py  extensions.py  interpreter.py  meal.py
set2/: camel.py  coke.py  nutrition.py  plates.py  twttr.py
set3/: fuel.py  grocery.py  outdated.py  taqueria.py
set4/: .env  adieu.py  bitcoin.py  emojize.py  figlet.py  game.py  main.py  professor.py  pyproject.toml
set5/: bank.py  fuel.py  main.py  plates.py  pyproject.toml  test_bank.py  test_fuel.py  test_plates.py  test_twttr.py  twttr.py
set6/: lines.py  pizza.py  pyproject.toml  scourgify.py  shirt.py
set7/: numb3rs.py  pyproject.toml  response.py  test_numb3rs.py  test_um.py  test_working.py  um.py  watch.py  working.py
set8/: jar.py  pyproject.toml  seasons.py  shirtificate.py  test_jar.py  test_seasons.py
