[project]
name = "cs50-python"
version = "0.1.0"
description = "CS50 Python Course - All Problem Sets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "fpdf2>=2.8.3",
    "inflect>=7.5.0",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "pyfiglet>=1.0.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "submit50>=3.2.1",
    "tabulate>=0.9.0",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "pytest>=8.4.1",
]
